# clang-format-prebuilt

./: MODULE.bazel  README.md  extensions.bzl  make_release.sh  release_info.bzl
.github/workflows/: main.yml  make_release.yml  test.yml
clang-format/: BUILD.bazel  binary.bzl  extensions.bzl  release_info.bzl  toolchain.bzl
test/: BUILD.bazel  MODULE.bazel  main.cpp
